parser/tests/bad/type02_type02.st
%
% 2 errors of TYPE02:
%   type of the expression cannot be assigned as the declared type
%
% This is to make sure our test case covers all branches
%

% variable identifier
var i: real := true

% const identifier
const j: real := false
